@@ -219,9 +219,16 @@ Unicode Standard Annex #29.
 50. Added experimental foreign pattern conversion facilities
 (pcre2_pattern_convert() and friends).
 
-51. Change the macro FWRITE, used in pcre2grep, to FWRITE_IGNORE because FWRITE 
-is defined in a system header in cygwin. Also modified some of the #ifdefs in 
+51. Change the macro FWRITE, used in pcre2grep, to FWRITE_IGNORE because FWRITE
+is defined in a system header in cygwin. Also modified some of the #ifdefs in
 pcre2grep related to Windows and Cygwin support.
+
+52. Change 3(g) for 10.23 was a bit too zealous. If a hyphen that follows a
+character class is the last character in the class, Perl does not give a
+warning. PCRE2 now also treats this as a literal.
+
+53. Related to 52, though PCRE2 was throwing an error for [[:digit:]-X] it was
+not doing so for [\d-X] (and similar escapes), as is documented.
 
 
 Version 10.23 14-February-2017
